--- a/css/stylesheet_menu1.css
+++ b/css/stylesheet_menu1.css
@@ -88,7 +88,7 @@ div{
 
 .blocmenu1{
 	/*display: flex;*/
-	font-size: 1.3em;
+	font-size: 0.8em;
 }
 #h2menu1{
 	font-size: 3em;
@@ -121,7 +121,7 @@ padding-left: 1rem;
 .h3menu1__underline{
 	background:linear-gradient(to top, rgba(61, 19, 25, 0.5) 0%, rgba(61, 19, 25,0.5) 3px, transparent 3px) no-repeat;
 	background-size:0 100%;
-	transition:background-size .1s;
+	transition:background-size .4s;
 }
 .h3menu1__underline:hover{
 	background-size: 100% 100%;
@@ -162,6 +162,10 @@ margin-bottom: 3rem;
 }
 .logodebut{
 	font-size: 5em;
+}
+.plat--texte {float: left; width:80%;}
+.plat--prix {font-weight: bold; float: right; width:10%; text-align: right;}
+.blocmenu1__plat {width:100%; font-size: 1.7em;}
 }
 /* ------ responsive ----- */
 @media(max-width:1023px){
