--- a/css/stylesheet_menu2.css
+++ b/css/stylesheet_menu2.css
@@ -88,12 +88,12 @@ div{
 #notemenu2{
 	border-radius: 0;
 }
-.blocmenu2{
+/*.blocmenu2{
 	display: flex;
 	justify-content: space-between;
-	font-size: 1.3em;
+	font-size: 1.2em;
 }
-
+*/
 #h2menu2{
 	font-size: 4em;
 	text-align: center;
@@ -101,43 +101,9 @@ div{
   -webkit-text-fill-color: transparent;
   background-image: -webkit-linear-gradient(left, orange, purple);
 }
-
-.color1{
-	color: rgb(198, 116, 18);
-}
 .h3menu2{
 	text-align: center;
 	font-size: 2em;
-}
-.h3menu2__hr{
-
-}
-.h3menu2__hr.hr--reverse{
-	transform: rotate(180deg);
-	transform-origin: 52% 58%;
-
-}
-.h3menu2__hr.hr--purple{
-	color: rgb(110, 76, 204);
-}
-.color2{
-	color: rgb(165, 103, 153);
-}
-.color3{
-	color: rgb(110, 76, 204);
-}
-.h3menu2__underline{
-background:linear-gradient(to top, rgba(61, 19, 25, 0.5) 0%, rgba(61, 19, 25,0.5) 3px, transparent 3px) no-repeat;
-	background-size:0 100%;
-	transition:background-size .1s;
-}
-.h3menu1__underline:hover{
-	background-size: 100% 100%;
-}
-.ulmenu2{
-	list-style: none;
-	display: flex;
-	flex-direction: row;
 }
 .prix{
 	font-weight: bold;
@@ -148,6 +114,55 @@ background:linear-gradient(to top, rgba(61, 19, 25, 0.5) 0%, rgba(61, 19, 25,0.5
 	justify-content: center;
 	margin-bottom: 4.5em;
 }
+.blocmenu2{display:inline;font-size:1.8rem;}
+.plat--texte {float: left; width:80%;}
+.plat--prix {font-weight: bold; float: right; width:10%; text-align: right;}
+.blocmenu1__plat {width:100%; font-size: 1.7em;}
+ /* ------------ Couleurs police ----------------- */
+.color1{
+	color: rgb(198, 116, 18);
+}
+.color2{
+	color: rgb(165, 103, 153);
+}
+.color3{
+	color: rgb(110, 76, 204);
+}
+
+/* --------------- Frise ------------------------------- */ 
+.h3menu2__hr{
+	width:6em;
+}
+.hr--reverse{
+	transform: rotate(180deg);
+	transform-origin: 52% 58%;
+}
+.h3menu2__hr.hr--orange{
+background:rgb(197, 117, 41);
+}
+.h3menu2__hr.hr--purple{
+	background: rgb(165, 103, 153);
+}
+
+.h3menu2__hr.hr--blue{
+	background: rgb(110, 76, 204);
+}
+
+/* ----------------- soulignement ------------------------*/
+.h3menu2__underline{
+background:linear-gradient(to top, rgba(61, 19, 25, 0.5) 0%, rgba(61, 19, 25,0.5) 3px, transparent 3px) no-repeat;
+	background-size:0 100%;
+	transition:background-size .4s;
+}
+.h3menu2__underline:hover{
+	background-size: 100% 100%;
+}
+
+
+/* ---  */
+
+
+
 /* ------ responsive ----- */
 @media(max-width:1023px){
 header{width:80%;}
