--- a/css/stylesheet_menu4.css
+++ b/css/stylesheet_menu4.css
@@ -20,10 +20,10 @@ footer{
 	background-color: rgb(87, 156, 135);
 	font-family: 'Noto Sans TC', sans-serif;
 	font-size: 1.4em;
-	width:47.1%;
+	width:48%;
 	padding-left: 1rem;
 	padding-right: 1rem;
-	margin-left: 25%;
+	margin-left: 24%;
 }
 a{
 		text-decoration: none;
@@ -69,7 +69,7 @@ section{
 	flex-direction: column;
 	justify-content: space-around;
    	margin-top: 1.3em;
-   	margin-left:-3em;
+   	margin-left:-2em;
 }
 div{
 	margin:0.5em;
@@ -80,11 +80,10 @@ div{
 	padding-top: 1.5em;
 	font-family: 'Satisfy', cursive;
 	color: rgb(61, 19, 25);
-	/*text-align: center;*/
+	margin-bottom: 5em;
 }
 
 .blocmenu4{
-	display: flex;
 	justify-content: space-between;
 	font-size: 1.3em;
 }
@@ -106,7 +105,7 @@ div{
 .h3menu4__underline{
 	background:linear-gradient(to top, rgba(4, 95, 8, 0.5) 0%, rgba(1, 223, 12,0.5) 3px, transparent 3px) no-repeat;
 	background-size:0 100%;
-	transition:background-size .1s;
+	transition:background-size .4s;
 }
 .h3menu4__underline:hover{
 	background-size: 100% 100%;
@@ -117,14 +116,13 @@ div{
 .color4{
 	color: rgb(110, 76, 204);
 }
-.ulmenu4{
-	list-style: none;
-	display: flex;
-	flex-direction: row;
+.plat--texte{
+float: left; width:80%;
 }
-.prix{
+.plat--prix{
 	font-weight: bold;
-	margin-bottom: 1.5em;
+	margin-right: 1em;
+	float: right; width:10%; text-align: right;
 }
 .logofin{
 	flex-direction: row;
