--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,28 +1,35 @@
+
 /*fonts*/
-@font-face {
+@font-face
+{
   font-family: 'Noto Sans TC', sans-serif;
   font-family: 'Satisfy', cursive;
-  src: url(https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;700&family=Satisfy&display=swap);
+  src: url(https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;
+  700&family=Satisfy&display=swap);
 }
 
-html {
+html
+{
   height: 100%;
   position: relative;
 }
 
-* {
+*
+{
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-body {
+body
+{
   font-family: 'Noto Sans TC', sans-serif;
   min-height: 100%;
   position: relative;
   padding-bottom: 5em;
 }
 
-header {
+header
+{
   background-color: #579c87;
   color: #fdcb46;
   font-family: 'Noto Sans TC', sans-serif;
@@ -35,143 +42,190 @@ header {
   margin-right: auto;
 }
 
-a {
+a
+{
   text-decoration: none;
   color: #fdcb46;
 }
 
-main {
-  width: 100%;
+main
+{
+  width: 80%;
   height: 100%;
   position: relative;
+  margin:auto;
 }
 
-.presentationmenu {
-  display: -webkit-box;
+.presentationmenu
+{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 100px 100px,
+  grid-gap:10px;
+  /*display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  flex-wrap: wrap;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
-  /*align-items: center;*/
+  justify-content: space-around;*/
   margin-top: 1.5em;
 }
 
-/*div{
-	margin:1.5em;
-}*/
-.presentationmenu__miniature {
-  display: -webkit-box;
+.presentationmenu__miniature
+{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  /*grid-template-rows: 100px 100px;
+  grid-gap:10px;*/
+  /*display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;*/
 }
 
-.presentationmenu--menu1, .presentationmenu--menu2, .presentationmenu--menu3, .presentationmenu--menu4 {
+.fab.fa-itunes-note
+{
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-image: -webkit-linear-gradient(left, indianred, lightcoral, orange);
+  font-size: 2em;
+}
+
+.presentationmenu--menu1, .presentationmenu--menu2, .presentationmenu--menu3, .presentationmenu--menu4
+{
   -webkit-box-shadow: 0px 0px 13px -1px #787478;
-          box-shadow: 0px 0px 13px -1px #787478;
+  box-shadow: 0px 0px 13px -1px #787478;
   width: 14em;
   height: 20em;
   text-align: center;
   padding-top: 6em;
 }
 
-.presentationmenu--menu1 {
+.presentationmenu--menu1
+{
+  grid-column: 1;
+  grid-row: 1;
   background-color: #fcdfdb;
   margin-top: 2em;
   margin-bottom: 6.5em;
   margin-right: 4em;
 }
 
-.menu1 {
+.menu1
+{
   margin: auto;
   padding-top: 1.5em;
   font-family: 'Satisfy', cursive;
   color: #3d1319;
 }
 
-.zoom {
- -webkit-transition: all 400ms ease;
--moz-transition: all 400ms ease;
--ms-transition: all 400ms ease;
--o-transition: all 400ms ease;
-transition: all 400ms ease;
+.zoom
+{
+  -webkit-transition: all 400ms ease;
+  -moz-transition: all 400ms ease;
+  -ms-transition: all 400ms ease;
+  -o-transition: all 400ms ease;
+  transition: all 400ms ease;
 }
-.zoom:hover {
+
+.zoom:hover
+{
   transform: scale(1.7);
   opacity:0.33;
 }
 
-.presentationmenu--menu2 {
+.presentationmenu--menu2
+{
+  grid-column: 2;
+  grid-row: 1;
   background-color: #fff5fe;
   margin-top: 2em;
   margin-bottom: 6.5em;
   margin-right: 4em;
 }
 
-.menu2 {
+.menu2
+{
   margin: auto;
   padding-top: 1.5em;
   font-family: 'Satisfy', cursive;
   color: #c77412;
 }
 
-.degrademenu2 {
-  /*font-size: 50px;*/
+.degrademenu2
+{
+  /*font-size: 50px;
+  */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-image: -webkit-linear-gradient(left, orange, purple);
 }
 
-.presentationmenu--menu3 {
+.presentationmenu--menu3
+{
+  
+  grid-column: 1;
+  grid-row: 2;
   background-color: #f9f9f9;
   margin-top: 2em;
   margin-bottom: 8.5em;
   margin-right: 4em;
 }
 
-.menu3 {
+.menu3
+{
   margin: auto;
   padding-top: 1.5em;
   font-family: 'Satisfy', cursive;
-  /*color: rgb(80, 118, 234);*/
+  /*color: rgb(80, 118, 234);
+  */
   color: #0887fb;
 }
 
-.degrademenu3 {
+.degrademenu3
+{
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-image: -webkit-linear-gradient(left, blue, cyan);
 }
 
-.presentationmenu--menu4 {
+.presentationmenu--menu4
+{
+    grid-column: 2;
+  grid-row: 2;
   background-color: #fdfffd;
   margin-right: 4em;
 }
 
-.menu4 {
+.menu4
+{
   margin: auto;
   padding-top: 1.5em;
   font-family: 'Satisfy', cursive;
   color: #4c9f42;
 }
 
-.degrademenu4 {
+.degrademenu4
+{
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-image: -webkit-linear-gradient(left, green, greenyellow);
 }
-
-.avenir {
+h3{
+  font-size:1.6rem;
+}
+.avenir
+{
   background-color: #579c87;
   font-family: 'Noto Sans TC', sans-serif;
   font-size: 2rem;
@@ -183,8 +237,8 @@ transition: all 400ms ease;
   border-radius: 1rem;
 }
 
-
-footer {
+footer
+{
   display: flex;
   position: fixed;
   bottom: 0;
@@ -198,89 +252,132 @@ footer {
   margin-left: 25%;
 }
 
-.footer__mention {
+.footer__mention
+{
   text-align: start;
   padding-left: 1rem;
 }
 
-.footer__contact {
+.footer__contact
+{
   display: inline;
-
-  
 }
+
 /* ---------------- animation points ---------------- */
-.dots {
+.dots
+{
   content: ".";
   animation: dots 1.2s steps(4, end) infinite;
 }
 
-@keyframes dots {
-  0%, 20% {
+@keyframes dots
+{
+  0%, 20%
+  {
     color: rgba(0, 0, 0, 0);
-    text-shadow: 0.25em 0 0 rgba(0, 0, 0, 0); 
+    text-shadow: 0.25em 0 0 rgba(0, 0, 0, 0);
   }
-  40% {
+
+  40%
+  {
     color: #FFCA28;
-    text-shadow: 0.25em 0 0 rgba(0, 0, 0, 0); 
+    text-shadow: 0.25em 0 0 rgba(0, 0, 0, 0);
   }
-  60% {
-    text-shadow: 0.25em 0 0 #fdcb46; 
+
+  60%
+  {
+    text-shadow: 0.25em 0 0 #fdcb46;
   }
-  80%, 100% {
+
+  80%, 100%
+  {
     text-shadow: 0.25em 0 0 #fdcb46;
   }
 }
 
 /* ------ shake shake shake! shake your milkshake! ----- */
-.btn:hover {
+.btn:hover
+{
   animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
   transform: translate3d(0, 0, 0);
   backface-visibility: hidden;
   perspective: 1000px;
 }
 
-@keyframes shake {
-  10%, 90% {
+@keyframes shake
+{
+  10%, 90%
+  {
     transform: translate3d(-1px, 0, 0);
   }
-  
-  20%, 80% {
+
+  20%, 80%
+  {
     transform: translate3d(2px, 0, 0);
   }
 
-  30%, 50%, 70% {
+  30%, 50%, 70%
+  {
     transform: translate3d(-4px, 0, 0);
   }
 
-  40%, 60% {
+  40%, 60%
+  {
     transform: translate3d(4px, 0, 0);
   }
 }
 
 /* ------ responsive ----- */
-@media(max-width:1023px){
+@media(max-width:1023px)
+{
+  .presentationmenu
+  {
+    display: flex;
+    justify-content: center;
+  }
 
-.presentationmenu{
-  display: flex;
-  
-  justify-content: center;
-}
-.presentationmenu__miniature{
-  display: flex;
-  flex-direction: column;
-  font-size:1.7rem;
-  margin-left: 4em;
-}
-.presentationmenu--menu1, .presentationmenu--menu2, .presentationmenu--menu3, .presentationmenu--menu4 {
-  
-  -webkit-box-shadow: 0px 0px 13px -1px #787478;
-          box-shadow: 0px 0px 13px -1px #787478;
-  width: 24em;
-  height: 36em;
-  text-align: center;
-  padding-top: 11em;
-}
-.menu1, .menu2, .menu3, .menu4{
-  font-size: 1.7em;
-}
+  .presentationmenu__miniature
+  {
+    display: flex;
+    flex-direction: column;
+    font-size:1.9rem;
+    margin-left: 4em;
+  }
+
+  .presentationmenu--menu1, .presentationmenu--menu2, .presentationmenu--menu3, .presentationmenu--menu4
+  {
+    -webkit-box-shadow: 0px 0px 13px -1px #787478;
+    box-shadow: 0px 0px 13px -1px #787478;
+    width: 24em;
+    height: 36em;
+    text-align: center;
+    padding-top: 11em;
+  }
+
+  .menu1, .menu2, .menu3, .menu4
+  {
+    font-size: 1.7em;
+  }
+
+  .avenir
+  {
+    width: 45%;
+    margin: auto;
+    margin-bottom: 2em;
+    font-size: 3em;
+  }
+
+  header
+  {
+    width:80%;
+    font-size: 2em;
+  }
+
+  footer
+  {
+    margin-top: 5em;
+    width:80%;
+    margin-left:3em;
+    font-size: 2em;
+  }
 }
