--- a/css/stylesheet_menu1.css
+++ b/css/stylesheet_menu1.css
@@ -1,6 +1,7 @@
-/* ---------------- header & footer ------------------------------ */
 
-header{
+/* ---------------- header & footer ------------------------------ */
+header
+{
 	background-color: rgb(87, 156, 135);
 	color: rgb(253, 203, 70);
 	font-family: 'Noto Sans TC', sans-serif;
@@ -12,7 +13,9 @@ header{
 	margin-left: auto;
 	margin-right: auto;
 }
-footer{
+
+footer
+{
 	display: flex;
 	position: fixed;
 	bottom: 0;
@@ -25,180 +28,282 @@ footer{
 	padding-right: 1rem;
 	margin-left: 24.9%;
 }
-a{
+
+a
+{
 	text-decoration: none;
 	color: rgb(253, 203, 70);
-	}
-.footer__mention{
+}
+
+.footer__mention
+{
 	text-align: start;
-	/*padding-left: 1rem;*/
+	/*padding-left: 1rem;
+	*/
 }
-.footer__contact{
+
+.footer__contact
+{
 	display: inline;
-	/*text-align: end*/;
+	/*text-align: end*/
+	;
 	/*padding-left: 17em;
-	padding-right: 1rem;*/
+	padding-right: 1rem;
+	*/
 }
+
 /* ------ shake shake shake! shake your milkshake! ----- */
-.btn:hover {
-  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
-  transform: translate3d(0, 0, 0);
-  backface-visibility: hidden;
-  perspective: 1000px;
+.btn:hover
+{
+	animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+	transform: translate3d(0, 0, 0);
+	backface-visibility: hidden;
+	perspective: 1000px;
 }
 
-@keyframes shake {
-  10%, 90% {
-    transform: translate3d(-1px, 0, 0);
-  }
-  
-  20%, 80% {
-    transform: translate3d(2px, 0, 0);
-  }
+@keyframes shake
+{
+	10%, 90%
+	{
+		transform: translate3d(-1px, 0, 0);
+	}
 
-  30%, 50%, 70% {
-    transform: translate3d(-4px, 0, 0);
-  }
+	20%, 80%
+	{
+		transform: translate3d(2px, 0, 0);
+	}
 
-  40%, 60% {
-    transform: translate3d(4px, 0, 0);
-  }
+	30%, 50%, 70%
+	{
+		transform: translate3d(-4px, 0, 0);
+	}
+
+	40%, 60%
+	{
+		transform: translate3d(4px, 0, 0);
+	}
 }
+
 /* ------------- menu1 ----------------- */
-section{
+section
+{
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-    align-items: center;
+	align-items: center;
 	margin-top: 1.5em;
 }
-div{
+
+div
+{
 	margin:0.5em;
 }
-#menu1{
+
+#menu1
+{
 	background-color: rgb(252,223, 219);
 	width:50%;
 	margin:auto;
 	padding-top: 1.5em;
 	font-family: 'Satisfy', cursive;
 	color: rgb(61, 19, 25);
-	/*text-align: center;*/
+	/*text-align: center;
+	*/
 }
 
-
-.blocmenu1{
-	/*display: flex;*/
+.blocmenu1
+{
+	/*display: flex;
+	*/
 	font-size: 0.8em;
 }
-#h2menu1{
+
+#h2menu1
+{
 	font-size: 3em;
 }
-.h3menu1{
+
+.h3menu1
+{
 	text-align: center;
 	font-size: 2em;
 }
-.h3menu1__hrg{
-width:30%;
-padding-right: 1rem;
+
+.h3menu1__hrg
+{
+	width:30%;
+	padding-right: 1rem;
 }
-.h3menu1__hrd{
-width:30%;
-padding-left: 1rem;
+
+.h3menu1__hrd
+{
+	width:30%;
+	padding-left: 1rem;
 }
-/*---- test 1
-.h3menu1__underline{
+
+/*---- test 1.h3menu1__underline
+{
 	transform: scaleX(1);
 	background: rgba(61, 19, 25, 0.5) hidden;
-
 }
-.h3menu1__underline:hover{
-	transform-origin: 0% 50%; 
+
+.h3menu1__underline:hover
+{
+	transform-origin: 0% 50%;
 	transform:scaleX(0);
 	transition: transform 1000ms;
 }
-----*/
 
-.h3menu1__underline{
+----*/
+.h3menu1__underline
+{
 	background:linear-gradient(to top, rgba(61, 19, 25, 0.5) 0%, rgba(61, 19, 25,0.5) 3px, transparent 3px) no-repeat;
 	background-size:0 100%;
 	transition:background-size .4s;
 }
-.h3menu1__underline:hover{
-	background-size: 100% 100%;
-}   
 
-/* ---- test2 
-.h3menu1__underline::after{ 
-  content: '';
-  transform-origin: 0 0;
-  transform: scaleX(0);
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: .4em; 
-  background: #78ab4e;
-  z-index: -1;
-  opacity: 0.8;
-  transition: transform .3s;
+.h3menu1__underline:hover
+{
+	background-size: 100% 100%;
 }
-.h3menu1__underline:hover::after{
+
+/* ---- test2 .h3menu1__underline::after
+{
+	content: '';
+	transform-origin: 0 0;
+	transform: scaleX(0);
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: .4em;
+	background: #78ab4e;
+	z-index: -1;
+	opacity: 0.8;
+	transition: transform .3s;
+}
+
+.h3menu1__underline:hover::after
+{
 	transform: scaleX(1);
-}*/
-.ulmenu1{
-	list-style: none;
-	display: flex;
-	flex-direction: row;
 }
-.prix{
+
+*/
+.prix
+{
 	font-weight: bold;
 }
-.fab.fa-itunes-note{
-	 -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-image: -webkit-linear-gradient(left, indianred, lightcoral, orange);
-padding-right: 3rem;
-margin-bottom: 3rem;
-}
-.logodebut{
-	font-size: 5em;
-}
-.plat--texte {float: left; width:80%;}
-.plat--prix {font-weight: bold; float: right; width:10%; text-align: right;}
-.blocmenu1__plat {width:100%; font-size: 1.7em;}
-}
-/* ------ responsive ----- */
-@media(max-width:1023px){
-header{width:80%;}
-footer{width: 75.6%;
-margin-left: 4.3em;}
-#menu1{
-	width:80%;
-	margin:auto;
-	padding-top: 1.5em;
-	font-family: 'Satisfy', cursive;
-	color: rgb(61, 19, 25);}
-.h3menu1{
-	font-size: 3em;
-}
-.h3menu1__hrg{
-width:18%;
-padding-right: 1rem;
-}
-.h3menu1__hrd{
-width:20%;
-padding-left: 1rem;
+
+.fab.fa-itunes-note
+{
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	background-image: -webkit-linear-gradient(left, indianred, lightcoral, orange);
+	padding-right: 3rem;
+	margin-bottom: 3rem;
 }
 
-.ulmenu1{
-  font-size: 1.9em;
+.logodebut
+{
+	font-size: 5em;
 }
-#h2menu1, h2{
-	font-size: 3em;
+
+.plat--texte
+{
+	float: left;
+	width:80%;
 }
-.ulmenu1{display: inline;
+
+.plat--prix
+{
+	font-weight: bold;
+	float: right;
+	width:10%;
+	text-align: right;
 }
-.plat--texte {float: left; width:80%;}
-.plat--prix {font-weight: bold; float: right; width:10%; text-align: right;}
-.blocmenu1__plat {width:100%; font-size: 1.7em;}
+
+.blocmenu1__plat
+{
+	width:100%;
+	font-size: 1.7em;
+}
+
+/* ------ responsive ----- */
+@media(max-width:1023px)
+{
+	header
+	{
+		width:80%;
+		font-size: 2em;
+	}
+
+	footer
+	{
+		margin-top: 5em;
+		width:75.8%;
+		margin-left:3em;
+		font-size: 2em;
+	}
+
+	#menu1
+	{
+		width:80%;
+		margin:auto;
+		padding-top: 1.5em;
+		font-family: 'Satisfy', cursive;
+		color: rgb(61, 19, 25);
+		font-size: 2em;
+	}
+
+	.logodebut
+	{
+		font-size:4em;
+	}
+
+	#h2menu1, h2
+	{
+		font-size: 2.5em;
+	}
+
+	.h3menu1
+	{
+		font-size: 1.4em;
+	}
+
+	.h3menu1__hrg
+	{
+		width:20%;
+	}
+
+	.h3menu1__hrd
+	{
+		width:20%;
+	}
+
+	.blocmenu1__plat
+	{
+		width:70%;
+		font-size: 1.7em;
+	}
+
+	.plat--texte
+	{
+		width:90%;
+	}
+
+	.plat--prix
+	{
+		font-weight: bold;
+		margin-right: -3em;
+		/*float: right;
+		width:10%;
+		text-align: right;
+		*/
+	}
+
+	.blocmenu1__dessert
+	{
+		width: 114%;
+		font-size: 1.6rem;
+	}
 }
