--- a/css/stylesheet_menu4.css
+++ b/css/stylesheet_menu4.css
@@ -1,6 +1,7 @@
-/* ---------------- header & footer ------------------------------ */
 
-header{
+/* ---------------- header & footer ------------------------------ */
+header
+{
 	background-color: rgb(87, 156, 135);
 	color: rgb(253, 203, 70);
 	font-family: 'Noto Sans TC', sans-serif;
@@ -12,7 +13,9 @@ header{
 	margin-left: auto;
 	margin-right: auto;
 }
-footer{
+
+footer
+{
 	display: flex;
 	position: fixed;
 	bottom: 0;
@@ -25,56 +28,78 @@ footer{
 	padding-right: 1rem;
 	margin-left: 24%;
 }
-a{
-		text-decoration: none;
-		color: rgb(253, 203, 70);
-	}
-.footer__mention{
+
+a
+{
+	text-decoration: none;
+	color: rgb(253, 203, 70);
+}
+
+.footer__mention
+{
 	text-align: start;
-	/*padding-left: 1rem;*/
+	/*padding-left: 1rem;
+	*/
 }
-.footer__contact{
+
+.footer__contact
+{
 	display: inline;
-	/*text-align: end*/;
+	/*text-align: end*/
+	;
 	/*padding-left: 17em;
-	padding-right: 1rem;*/
-}
-.btn:hover {
-  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
-  transform: translate3d(0, 0, 0);
-  backface-visibility: hidden;
-  perspective: 1000px;
+	padding-right: 1rem;
+	*/
 }
 
-@keyframes shake {
-  10%, 90% {
-    transform: translate3d(-1px, 0, 0);
-  }
-  
-  20%, 80% {
-    transform: translate3d(2px, 0, 0);
-  }
-
-  30%, 50%, 70% {
-    transform: translate3d(-4px, 0, 0);
-  }
-
-  40%, 60% {
-    transform: translate3d(4px, 0, 0);
-  }
+.btn:hover
+{
+	animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+	transform: translate3d(0, 0, 0);
+	backface-visibility: hidden;
+	perspective: 1000px;
 }
+
+@keyframes shake
+{
+	10%, 90%
+	{
+		transform: translate3d(-1px, 0, 0);
+	}
+
+	20%, 80%
+	{
+		transform: translate3d(2px, 0, 0);
+	}
+
+	30%, 50%, 70%
+	{
+		transform: translate3d(-4px, 0, 0);
+	}
+
+	40%, 60%
+	{
+		transform: translate3d(4px, 0, 0);
+	}
+}
+
 /* ------------- menu2 ----------------- */
-section{
+section
+{
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-   	margin-top: 1.3em;
-   	margin-left:-2em;
+	margin-top: 1.3em;
+	margin-left:-2em;
 }
-div{
+
+div
+{
 	margin:0.5em;
 }
-#menu4{
+
+#menu4
+{
 	width:50%;
 	margin:auto;
 	padding-top: 1.5em;
@@ -83,49 +108,145 @@ div{
 	margin-bottom: 5em;
 }
 
-.blocmenu4{
+.blocmenu4
+{
 	justify-content: space-between;
 	font-size: 1.3em;
 }
 
-#h2menu4{
+#h2menu4
+{
 	font-size: 4em;
 	text-align: center;
 	-webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-image: -webkit-linear-gradient(left, green, greenyellow);
+	-webkit-text-fill-color: transparent;
+	background-image: -webkit-linear-gradient(left, green, greenyellow);
 }
-.h3menu4{
+
+.h3menu4
+{
 	text-align: center;
 	font-size: 2em;
 }
-.h3menu4__reverse{
+
+.h3menu4__reverse
+{
 	transform: rotateY(3.142rad);
 }
-.h3menu4__underline{
+
+.h3menu4__underline
+{
 	background:linear-gradient(to top, rgba(4, 95, 8, 0.5) 0%, rgba(1, 223, 12,0.5) 3px, transparent 3px) no-repeat;
 	background-size:0 100%;
 	transition:background-size .4s;
 }
-.h3menu4__underline:hover{
+
+.h3menu4__underline:hover
+{
 	background-size: 100% 100%;
-} 
-.color4{
-	color: rgb(165, 103, 153);
 }
-.color4{
-	color: rgb(110, 76, 204);
+
+.plat--texte
+{
+	float: left;
+	width:80%;
 }
-.plat--texte{
-float: left; width:80%;
-}
-.plat--prix{
+
+.plat--prix
+{
 	font-weight: bold;
 	margin-right: 1em;
-	float: right; width:10%; text-align: right;
+	float: right;
+	width:10%;
+	text-align: right;
 }
-.logofin{
+
+.logofin
+{
 	flex-direction: row;
 	justify-content: center;
 	margin-bottom: 4.5em;
+}
+
+/* ------ responsive ----- */
+@media(max-width:1023px)
+{
+	header
+	{
+		width:80%;
+		font-size: 2em;
+	}
+
+	footer
+	{
+		margin-top: 5em;
+		width:75.8%;
+		margin-left:3em;
+		font-size: 2em;
+	}
+
+	#menu4
+	{
+		width:80%;
+		margin:auto;
+		padding-top: 1.5em;
+		font-family: 'Satisfy', cursive;
+		color: rgb(61, 19, 25);
+		margin-bottom: 7em;
+	}
+
+	.h2menu4
+	{
+		font-size: 3.5em;
+	}
+
+	.h3menu4
+	{
+		font-size: 2.5em;
+	}
+
+	.h3menu4__hr
+	{
+		width:18%;
+	}
+
+	.h3menu4__hr.hr--reverse
+	{
+		width:18%;
+	}
+
+	#h2menu4,
+	{
+		font-size: 4em;
+	}
+
+	.blocmenu4
+	{
+		display:inline;
+		/*font-size:1.8rem;
+		*/
+	}
+
+	.plat--texte
+	{
+		float: left;
+		width:60%;
+		font-size:2.5rem;
+	}
+
+	.plat--prix
+	{
+		font-weight: bold;
+		float: right;
+		width:10%;
+		text-align: right;
+		font-size:2.3rem;
+	}
+
+	.blocmenu1__plat
+	{
+		width:100%;
+		font-size: 1.7em;
+	}
+}
 }
