--- a/css/stylesheet_menu4.css
+++ b/css/stylesheet_menu4.css
@@ -38,18 +38,11 @@ a
 .footer__mention
 {
 	text-align: start;
-	/*padding-left: 1rem;
-	*/
 }
 
 .footer__contact
 {
 	display: inline;
-	/*text-align: end*/
-	;
-	/*padding-left: 17em;
-	padding-right: 1rem;
-	*/
 }
 
 .btn:hover
@@ -168,7 +161,7 @@ div
 	margin-bottom: 4.5em;
 }
 
-/* ------ responsive ----- */
+/* ------ responsive petit écran ----- */
 @media(max-width:1023px)
 {
 	header
@@ -215,7 +208,7 @@ div
 		width:18%;
 	}
 
-	#h2menu4,
+	#h2menu4
 	{
 		font-size: 4em;
 	}
@@ -223,8 +216,6 @@ div
 	.blocmenu4
 	{
 		display:inline;
-		/*font-size:1.8rem;
-		*/
 	}
 
 	.plat--texte
@@ -249,4 +240,63 @@ div
 		font-size: 1.7em;
 	}
 }
+
+/* ------ responsive grand écran ----- */
+@media(min-width:1980px)
+{
+	#menu4
+	{
+		width:80%;
+		margin-bottom: 14em;
+	}
+
+	.logodebut
+	{
+		font-size: 15em;
+	}
+
+	#h2menu4
+	{
+		font-size: 13em;
+	}
+
+	.h3menu4
+	{
+		font-size: 6em;
+	}
+
+	.hrmenu4
+	{
+		width:5em;
+	}
+
+	.hrmenu4__reverse
+	{
+		width:5em;
+	}
+
+	.plat--texte, .plat--prix
+	{
+		font-size: 3.5em;
+	}
+
+	.blocmenu1__dessert
+	{
+		font-size: 0.8rem;
+		margin-left: 4em;
+	}
+
+	header
+	{
+		width:80%;
+		font-size: 4em;
+	}
+
+	footer
+	{
+		margin-top: 5em;
+		width:78.8%;
+		margin-left:6em;
+		font-size: 4em;
+	}
 }
