--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -81,7 +81,7 @@ main
   grid-template-columns: 300px 300px;
   grid-template-rows: 400px 400px;
   margin-top: 1.5em;
-  margin-left: 5em;
+  margin-left: 4.5em;
   justify-content: center;
 }
 
@@ -227,15 +227,29 @@ h3
   /*font-size: 2rem;
   */
   color: #fdcb46;
-  width: 20%;
-  margin-left: 41%;
+  width: 40%;
+  margin-left: 31%;
   margin-bottom: 2em;
   text-align: center;
   border-radius: 1rem;
 }
 
 /* ---------------- animation points ---------------- */
-.dots
+.dots:after{
+  overflow: hidden;
+  display: inline-block;
+  vertical-align: bottom;
+  -webkit-animation: ellipsis steps(5,end) 3s infinite;      
+  animation: ellipsis steps(5,end) 3s infinite;
+  content: "...";
+  width: 0%;
+}
+@keyframes ellipsis {
+  to {
+    width: 9%;    
+  }
+}
+/*.dots
 {
   content: ".";
   animation: dots 1.2s steps(4, end) infinite;
@@ -245,8 +259,8 @@ h3
 {
   0%, 20%
   {
-    color: rgba(0, 0, 0, 0);
-    text-shadow: 0.25em 0 0 rgba(0, 0, 0, 0);
+   color: rgba(0, 0, 0, 0);
+   text-shadow: 0.25em 0 0 rgba(0, 0, 0, 0);
   }
 
   40%
@@ -257,14 +271,16 @@ h3
 
   60%
   {
-    text-shadow: 0.25em 0 0 #fdcb46;
+  /* color: rgba(0, 0, 0, 0);*/
+  /*  text-shadow: 0.25em 0 0 #fdcb46;
   }
 
   80%, 100%
   {
-    text-shadow: 0.25em 0 0 #fdcb46;
+   /*color:rgba(0, 0, 0, 0)*/
+  /* text-shadow: 0.25em 0 0 #fdcb46;
   }
-}
+}*/
 
 /* ------ shake shake shake! shake your milkshake! ----- */
 .btn:hover
