--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -235,7 +235,8 @@ h3
 }
 
 /* ---------------- animation points ---------------- */
-.dots:after{
+/*tentative 1
+.dots::after{
   overflow: hidden;
   display: inline-block;
   vertical-align: bottom;
@@ -248,50 +249,55 @@ h3
   to {
     width: 9%;    
   }
-}
-/*.dots
-{
-  content: ".";
-  animation: dots 1.2s steps(4, end) infinite;
-}
-
-@keyframes dots
-{
-  0%, 20%
-  {
-   color: rgba(0, 0, 0, 0);
-   text-shadow: 0.25em 0 0 rgba(0, 0, 0, 0);
-  }
-
-  40%
-  {
-    color: #FFCA28;
-    text-shadow: 0.25em 0 0 rgba(0, 0, 0, 0);
-  }
-
-  60%
-  {
-  /* color: rgba(0, 0, 0, 0);*/
-  /*  text-shadow: 0.25em 0 0 #fdcb46;
-  }
-
-  80%, 100%
-  {
-   /*color:rgba(0, 0, 0, 0)*/
-  /* text-shadow: 0.25em 0 0 #fdcb46;
-  }
 }*/
+
+
+  .dots:after {
+      display: inline-block;
+      animation: dotty steps(4,end) 4s infinite;
+      content: '';
+    }
+
+    @keyframes dotty {
+        0%   { content: ''; }
+        25%  { content: '.'; }
+        50%  { content: '..'; }
+        75%  { content: '...'; }
+        100% { content: ''; }
+    }
 
 /* ------ shake shake shake! shake your milkshake! ----- */
 .btn:hover
 {
   animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
-  transform: translate3d(0, 0, 0);
+  transform: translate(0, 0);
   backface-visibility: hidden;
   perspective: 1000px;
 }
-
 @keyframes shake
+{
+  10%, 90%
+  {
+    transform: translate(-1px, 0);
+  }
+
+  20%, 80%
+  {
+    transform: translate(2px, 0);
+  }
+
+  30%, 50%, 70%
+  {
+    transform: translate(-4px, 0);
+  }
+
+  40%, 60%
+  {
+    transform: translate(4px, 0);
+  }
+}
+
+/*@keyframes shake
 {
   10%, 90%
   {
@@ -312,7 +318,7 @@ h3
   {
     transform: translate3d(4px, 0, 0);
   }
-}
+}*/
 
 /* ------ responsive petit écran ----- */
 @media(max-width:1023px)
