--- a/css/stylesheet_menu3.css
+++ b/css/stylesheet_menu3.css
@@ -49,7 +49,7 @@ a
 .btn:hover
 {
 	animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
-	transform: translate3d(0, 0, 0);
+	transform: translate(0, 0);
 	backface-visibility: hidden;
 	perspective: 1000px;
 }
@@ -58,25 +58,24 @@ a
 {
 	10%, 90%
 	{
-		transform: translate3d(-1px, 0, 0);
+		transform: translate(-1px, 0);
 	}
 
 	20%, 80%
 	{
-		transform: translate3d(2px, 0, 0);
+		transform: translate(2px, 0);
 	}
 
 	30%, 50%, 70%
 	{
-		transform: translate3d(-4px, 0, 0);
+		transform: translate(-4px, 0);
 	}
 
 	40%, 60%
 	{
-		transform: translate3d(4px, 0, 0);
+		transform: translate(4px, 0);
 	}
 }
-
 /* ------------- menu2 ----------------- */
 section
 {
