--- a/css/specific.css
+++ b/css/specific.css
@@ -11,9 +11,7 @@ main
   height: 100%;
   position: relative;
 }
-/*h2{
-  font-family: 'Dosis', sans-serif;
-}*/
+
 .font1{
   font-family: 'Rochester', cursive;
 }
@@ -100,14 +98,7 @@ main
   color: #4c9f42;
   font-size:1.3em;
 }
-/*.degrademenu3
-{
-  background-image: -webkit-linear-gradient(left, blue, cyan);
-}
-.degrademenu4
-{
-  background-image: -webkit-linear-gradient(left, green, greenyellow);
-}*/
+
 .menugras{
   font-weight: bold;
   font-size: 1.7em;
@@ -167,7 +158,7 @@ main
   padding-top: 1.5em;
   color: rgb(61, 19, 25);
 }
-  .menu1__font, .menu1{
+  .menu1__font{
   font-family: 'Rochester', cursive;
 }
 .section1
@@ -233,22 +224,6 @@ section
 {
   transform: rotate(180deg);
   transform-origin: 52% 58%;
-}
-
-
-/* ---- soulignement ----*/
-.underline--1
-{
-  background:linear-gradient(to top, rgba(61, 19, 25, 0.5) 0%, rgba(50, 28, 31,0.5) 3px, transparent 3px) no-repeat;
-}
-.underline--21{
-  background:linear-gradient(to top, rgba(198, 116, 18, 0.5) 0%, rgba(212, 118, 7,0.5) 3px, transparent 3px) no-repeat;
-}
-.underline--22{
-  background:linear-gradient(to top, rgba(165, 103, 153, 0.5) 0%, rgba(144, 58, 127,0.5) 3px, transparent 3px) no-repeat;
-}
-.underline--23{
-  background:linear-gradient(to top, rgba(110, 76, 204, 0.5) 0%, rgba(43, 15, 120,0.5) 3px, transparent 3px) no-repeat;
 }
 
 /* ------------------------------- menu3 ---------------------------------------- */
